--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<groupId>com.example.springcloud</groupId>
-	<artifactId>eureka-</artifactId>
+	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
