--- a/eureka-client2/src/main/resources/application.yml
+++ b/eureka-client2/src/main/resources/application.yml
@@ -1,12 +1,10 @@
-
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://peer2:8762/eureka/
 
 server:
-  port: 8763
+  port: 8764
 spring:
   application:
     name: eureka-client2
-
