--- a/eureka-client/pom.xml
+++ b/eureka-client/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.example</groupId>
-        <artifactId>springcolud</artifactId>
+        <artifactId>springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
