--- a/eureka-feign-client/pom.xml
+++ b/eureka-feign-client/pom.xml
@@ -13,7 +13,7 @@
 
 	<parent>
 		<groupId>com.example</groupId>
-		<artifactId>springcolud</artifactId>
+		<artifactId>springcloud</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
@@ -38,6 +38,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.netflix.feign</groupId>
+			<artifactId>feign-httpclient</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 
