--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -1,32 +1,43 @@
----
-spring:
-  profiles: peer1
 server:
   port: 8761
 eureka:
   instance:
     hostname: peer1
   client:
-    #是否向服务注册中心注册自己
-    #register-with-eureka: false
-    #是否检索服务
-    #fetch-registry: false
+    register-with-eureka: false
+    fetch-registry: false
     service-url:
-      #服务注册中心的配置内容，指定服务注册中心的位置
-      defaultZone: http://peer2:8762/eureka/
+      defaultZone: http://peer1:8761/eureka
 
 ---
-spring:
-  profiles: peer2
-server:
-  port: 8762
-eureka:
-  instance:
-    hostname: peer2
-  client:
-    #register-with-eureka: false
-    #fetch-registry: false
-    service-url:
-      defaultZone: http://peer1:8761/eureka/
+#spring:
+#  profiles: peer1
+#server:
+#  port: 8761
+#eureka:
+#  instance:
+#    hostname: peer1
+#  client:
+#    #是否向服务注册中心注册自己
+#    #register-with-eureka: false
+#    #是否检索服务
+#    #fetch-registry: false
+#    service-url:
+#      #服务注册中心的配置内容，指定服务注册中心的位置
+#      defaultZone: http://peer2:8762/eureka/
+
+---
+#spring:
+#  profiles: peer2
+#server:
+#  port: 8762
+#eureka:
+#  instance:
+#    hostname: peer2
+#  client:
+#    #register-with-eureka: false
+#    #fetch-registry: false
+#    service-url:
+#      defaultZone: http://peer1:8761/eureka/
 
 
